2018-05-24 Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1059

	* src/m_rte.h (yCalcAppend):
	- Fixed handling of scattering species in the Jacobian.

	* src/m_cloudradar.cc (yCalcActive):
	- Fixed dimension of y_geo

2018-05-24  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-1058

	* src/linefunctions.h (SingleLevelLineData):

	Remove namespace from friend declaration. Compiler assumes same
	namespace anyway. If the namespace is given explicitly the
	function must be declared beforehand, not after. Fixes compilation
	failure with Clang. Reported by Lukas.

	* src/absorption.cc (xsec_species2):

	Use a vector variable in ternary operator instead of a temporary
	object. Fixes runtime error in TestVoigt when compiling with Clang.

2018-05-23  Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-1057
	
	Error rundown in the new lineshapes for Voigt ready.  Also
	found inherent issue in current derivatives for VMR.  VMR
	derivatives are today introducing an error of 1/(1-vmr) on
	the line shape itself.  This was true for semi-analytic
	test cases as well but not for perturbed.  The fix is to
	implement VMR derivatives for pressure broadening for the 
	self-broadening component of a line.  I will get on this
        at some point, but we mostly retrieve trace gases these
        days so the error is only important for more prevalent 
        species...
	
	* controlfiles/*: Added test to fast for Voigt lineshape.
	Note that you cannot run the python plotting-script before
	you have the latest version of typhon (which I will
	commit around the same time as this commit)
	
	* src/absorption.cc:  Fixed size of derivatives
	
	* src/jacobian.{cc,h}: Fixed *equivlent_propmattype_indexes*
	and the first-index calls to not point at wrong things...
	would not work if external derivatives were mixed in amongst
	the normal derivatives with old update...
	
	* src/linefunctions.cc:  Moved line mixing derivatives around