@@ -1,3 +1,12 @@
+2018-05-27  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
+	* arts-2-3-1060
+
+	* src/m_fos.cc (iyHybrid): Fixed inconsistency around iy_aux_vars,
+	reported by Simon. The handled options are now "Radiative
+	background" and "Optical depth". Switched to optical depth to be
+	consistent with iyEmissionStandard, and as the original plan.
+
 2018-05-24 Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>
 
 	* arts-2-3-1059
